update ai course

--- a/ai-fullstack-course/09-llm-tools/index.ipynb
+++ b/ai-fullstack-course/09-llm-tools/index.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "source": [
     "1. **LangSmith**: LangChain 的官方平台，SaaS 服务，非开源；\n",
-    "2. **LangFuse**: 开源 + SaaS，LangSmith 平替，可继承 LangChain 也可直接对接 OpenAI API；\n",
+    "2. **LangFuse**: 开源 + SaaS，LangSmith 平替，可集成 LangChain 也可直接对接 OpenAI API；\n",
     "3. **Prompt Flow**：微软开发，开源 + Azure AI云服务，可集成 Semantic Kernel。"
    ]
   },
@@ -564,16 +564,16 @@
    "metadata": {},
    "source": [
     "```python\n",
-    "from langsmith import Client\r\n",
-    "from langchain.smith import RunEvalConfig, run_on_dataset\r\n",
-    "\r\n",
-    "evaluation_config = RunEvalConfig(\r\n",
-    "    evaluators=[\r\n",
-    "        # You can define an arbitrary criterion as a key: value pair in the criteria dict\r\n",
-    "        RunEvalConfig.Criteria({\"creativity\": \"Is this submission creative, imaginative, or novel?\"}),\r\n",
-    "        # We provide some simple default criteria like \"conciseness\" you can use as well\r\n",
-    "        RunEvalConfig.Criteria(\"conciseness\"),\r\n",
-    "    ]\r\n",
+    "from langsmith import Client\n",
+    "from langchain.smith import RunEvalConfig, run_on_dataset\n",
+    "\n",
+    "evaluation_config = RunEvalConfig(\n",
+    "    evaluators=[\n",
+    "        # You can define an arbitrary criterion as a key: value pair in the criteria dict\n",
+    "        RunEvalConfig.Criteria({\"creativity\": \"Is this submission creative, imaginative, or novel?\"}),\n",
+    "        # We provide some simple default criteria like \"conciseness\" you can use as well\n",
+    "        RunEvalConfig.Criteria(\"conciseness\"),\n",
+    "    ]\n",
     ")\n",
     "```"
    ]
